
        [float]
        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-4.x]]
=== Node.js Agent version 4.x

See the <<upgrade-to-v4>> guide.

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

[float]
===== Chores

* Skip undici tests for `undici` `>=5.28.0` and NodeJS `<14.18.0`.
  ({pull}3755[#3755])


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

[float]
===== Chores

* Explicitly mark this package as being of type="commonjs". The experimental
  `node --experimental-default-type=module ...` option
  https://nodejs.org/en/blog/release/v20.10.0#--experimental-default-type-flag-to-flip-module-defaults[added in Node.js v20.10.0]
  means that a default to "commonjs" isn't guaranteed.


[[release-notes-4.2.0]]
==== 4.2.0 - 2023/11/23

[float]
===== Breaking changes

* Drop support for next@11. Next.js instrumentation support is currently in
  technical preview, so it is not considered a semver-major change to drop
  support for this old version of next. ({pull}3664[#3664])

[float]
===== Features

* Add <<apm-get-service-version>>, <<apm-get-service-environment>>, and
  <<apm-get-service-node-name>>. These are intended for use by
  {ecs-logging-nodejs-ref}/intro.html[ecs-logging-nodejs formatting packages].
  See <https://github.com/elastic/ecs-logging-nodejs/pull/152>.
  ({issues}3195[#3195])

* Add knex@3 instrumentation. ({pull}3659[#3659])

* Update <<opentelemetry-bridge>> support to `@opentelemetry/api` version 1.7.0.

[float]
===== Bug fixes

* Fix `mongodb` instrumentation to avoid loosing context when multiple cursors
  are running concurrently. ({issues}3161[#3161])

* Set `mongodb` span's outcome according to the result of the command being traced.
  ({pull}3695[#3695])
