@@ -166,6 +166,7 @@ function getHttpClientConfig(conf, agent) {
     serverCaCert: loadServerCaCertFile(conf.serverCaCertFile),
     rejectUnauthorized: conf.verifyServerCert,
     serverTimeout: conf.serverTimeout * 1000,
+    headers: maybePairsToObject(conf.apmClientHeaders),
 
     // APM Agent Configuration via Kibana:
     centralConfig: conf.centralConfig,
