@@ -590,6 +590,12 @@ const CONFIG_SCHEMA = [
     defaultValue: [],
     deps: ['ignoreUserAgents'],
   },
+  {
+    name: 'apmClientHeaders',
+    configType: 'stringKeyValuePairs',
+    defaultValue: undefined,
+    envVar: 'ELASTIC_APM_APM_CLIENT_HEADERS',
+  },
   // Special options that
   // - may afect the whole config
   // - change the behavior of thelogger
